apply plugin: 'java'
apply plugin: 'maven'
apply plugin: 'eclipse'
apply plugin: 'idea'

repositories {
  //mavenCentral()
  jcenter()
}

//noinspection GroovyUnusedAssignment
sourceCompatibility = '1.9'

dependencies {
  compile 'org.easytesting:fest-assert:1.4'
  compile 'commons-collections:commons-collections:3.2'
  //compile 'org.springframework:spring-full:1.2.8'
  compile 'commons-io:commons-io:2.6'

//  compile group: 'com.google.guava', name: 'guava', version: '23.0'

  testCompile 'org.testng:testng:6.5.1'

  compile 'org.jcodec:jcodec:0.1.9'

  compile group: 'org.rocksdb', name: 'rocksdbjni', version: '5.1.2'

}

test { useTestNG() }

task SortTester(type: JavaExec) {
  main = 'pompei.maths.utils.SortLauncher'
  classpath sourceSets.test.runtimeClasspath
}